// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Banner should render banner of anty type and size 1`] = `
<div
  className="banner--info banner"
>
  <div
    className="banner__content--small"
  >
    <BannerIcon
      type="info"
    />
    <p>
      Example text
    </p>
  </div>
  <CloseIcon
    className="banner--icon__close"
    fill="#424d57"
    onClick={[MockFunction]}
  />
</div>
`;

exports[`Banner should render banner of anty type and size 2`] = `
<div
  className="banner--info banner"
>
  <div
    className="banner__content--large"
  >
    <BannerIcon
      type="info"
    />
    <p>
      Example text
    </p>
  </div>
  <CloseIcon
    className="banner--icon__close"
    fill="#424d57"
    onClick={[MockFunction]}
  />
</div>
`;

exports[`Banner should render banner of anty type and size 3`] = `
<div
  className="banner--info banner"
>
  <div
    className="banner__content--medium"
  >
    <BannerIcon
      type="info"
    />
    <p>
      Example text
    </p>
  </div>
  <CloseIcon
    className="banner--icon__close"
    fill="#424d57"
    onClick={[MockFunction]}
  />
</div>
`;

exports[`Banner should render banner of anty type and size 4`] = `
<div
  className="banner--warning banner"
>
  <div
    className="banner__content--small"
  >
    <BannerIcon
      type="warning"
    />
    <p>
      Example text
    </p>
  </div>
  <CloseIcon
    className="banner--icon__close"
    fill="#424d57"
    onClick={[MockFunction]}
  />
</div>
`;

exports[`Banner should render banner of anty type and size 5`] = `
<div
  className="banner--warning banner"
>
  <div
    className="banner__content--large"
  >
    <BannerIcon
      type="warning"
    />
    <p>
      Example text
    </p>
  </div>
  <CloseIcon
    className="banner--icon__close"
    fill="#424d57"
    onClick={[MockFunction]}
  />
</div>
`;

exports[`Banner should render banner of anty type and size 6`] = `
<div
  className="banner--warning banner"
>
  <div
    className="banner__content--medium"
  >
    <BannerIcon
      type="warning"
    />
    <p>
      Example text
    </p>
  </div>
  <CloseIcon
    className="banner--icon__close"
    fill="#424d57"
    onClick={[MockFunction]}
  />
</div>
`;

exports[`Banner should render banner of anty type and size 7`] = `
<div
  className="banner--success banner"
>
  <div
    className="banner__content--small"
  >
    <BannerIcon
      type="success"
    />
    <p>
      Example text
    </p>
  </div>
  <CloseIcon
    className="banner--icon__close"
    fill="#424d57"
    onClick={[MockFunction]}
  />
</div>
`;

exports[`Banner should render banner of anty type and size 8`] = `
<div
  className="banner--success banner"
>
  <div
    className="banner__content--large"
  >
    <BannerIcon
      type="success"
    />
    <p>
      Example text
    </p>
  </div>
  <CloseIcon
    className="banner--icon__close"
    fill="#424d57"
    onClick={[MockFunction]}
  />
</div>
`;

exports[`Banner should render banner of anty type and size 9`] = `
<div
  className="banner--success banner"
>
  <div
    className="banner__content--medium"
  >
    <BannerIcon
      type="success"
    />
    <p>
      Example text
    </p>
  </div>
  <CloseIcon
    className="banner--icon__close"
    fill="#424d57"
    onClick={[MockFunction]}
  />
</div>
`;

exports[`Banner should render banner of anty type and size 10`] = `
<div
  className="banner--error banner"
>
  <div
    className="banner__content--small"
  >
    <BannerIcon
      type="error"
    />
    <p>
      Example text
    </p>
  </div>
  <CloseIcon
    className="banner--icon__close"
    fill="#424d57"
    onClick={[MockFunction]}
  />
</div>
`;

exports[`Banner should render banner of anty type and size 11`] = `
<div
  className="banner--error banner"
>
  <div
    className="banner__content--large"
  >
    <BannerIcon
      type="error"
    />
    <p>
      Example text
    </p>
  </div>
  <CloseIcon
    className="banner--icon__close"
    fill="#424d57"
    onClick={[MockFunction]}
  />
</div>
`;

exports[`Banner should render banner of anty type and size 12`] = `
<div
  className="banner--error banner"
>
  <div
    className="banner__content--medium"
  >
    <BannerIcon
      type="error"
    />
    <p>
      Example text
    </p>
  </div>
  <CloseIcon
    className="banner--icon__close"
    fill="#424d57"
    onClick={[MockFunction]}
  />
</div>
`;
